chandeliers-lus/tests/compile_fail/ui/tc/poly/dup.rs
chandeliers_lus::decl! {
    #[generic[T, T]]
    node id(t0: T) returns (t1: T);
    let t1 = t0; tel;
}

fn main() {}
