chandeliers-lus/tests/compile_fail/ui/tc/poly/dup.stderr
error: Malformed attribute generic: Gereric parameter `T` is declared twice
 --> tests/compile_fail/ui/tc/poly/dup.rs:3:5
  |
3 |     #[generic[T, T]]
  |     ^^^^^^^^^^^^^^^^
  |
  = note: Type variables must have mutually distinct names
